--- a/projects/navbar_hover/style.css
+++ b/projects/navbar_hover/style.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Intel:wght@200;300;400;500&amp;display=swap);
+@import url(https://fonts.googleapis.com/css?family=Inter:wght@200;300;400;500&amp;display=swap);
 :root{
     --highlight: #5756e6;
 }
